bug where banner covers button. needed a media q

--- a/app/globals.css
+++ b/app/globals.css
@@ -293,3 +293,11 @@ body{
     margin-bottom: 5rem;
     max-width: 800px;
 }
+
+
+
+@media only screen and (min-width: 1500px) {
+    .socials-banner{
+        bottom: -4rem;
+    }
+}
